[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/actors/enemy/aeros.gd" type="Script" id=1]
[ext_resource path="res://nodes/actors/enemy_core.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/specs.gd" type="Script" id=3]
[ext_resource path="res://assets/images/Enemy_Galore_I/Golem/No Armor/Golem_Full.png" type="Texture" id=4]
[ext_resource path="res://assets/images/kenney-particle-pack-7e801dc538996622a91327bb1dd5879cf977aa09/addons/kenney_particle_pack/slash_03.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 12.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3.5, 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 17.5, 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 177.5, 114.5 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/HurtArea:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.85
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/HurtArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/AttackParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.85
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55, 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/HurtArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[node name="Aeros" type="KinematicBody2D" groups=["enemy"]]
collision_mask = 4
script = ExtResource( 1 )

[node name="HitBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, -13 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -15 )
texture = ExtResource( 4 )
hframes = 9
vframes = 9
frame = 20

[node name="Blood" type="CPUParticles2D" parent="Sprite"]
position = Vector2( 7.10543e-15, 0 )
scale = Vector2( 0.833333, 0.833333 )
emitting = false
amount = 40
lifetime = 0.3
one_shot = true
emission_shape = 1
emission_sphere_radius = 1.0
angular_velocity = 100.0
radial_accel = 100.0
tangential_accel = 100.0
color = Color( 1, 0, 0, 1 )

[node name="HurtArea" type="Area2D" parent="Sprite"]
visible = false
monitoring = false

[node name="HurtBox" type="CollisionShape2D" parent="Sprite/HurtArea"]
position = Vector2( 10, 2.5 )
shape = SubResource( 6 )

[node name="SlowdownArea" type="Area2D" parent="Sprite"]
visible = false

[node name="SlowdownBox" type="CollisionShape2D" parent="Sprite/SlowdownArea"]
position = Vector2( 0.5, 5 )
shape = SubResource( 7 )

[node name="TargetArea" type="Area2D" parent="Sprite"]
visible = false

[node name="TargetBox" type="CollisionShape2D" parent="Sprite/TargetArea"]
position = Vector2( 0.5, 5 )
shape = SubResource( 8 )

[node name="WatchArea" type="Area2D" parent="Sprite"]
visible = false

[node name="WatchBox" type="CollisionShape2D" parent="Sprite/WatchArea"]
position = Vector2( -1, 21.5 )
shape = SubResource( 9 )

[node name="AttackParticles" type="CPUParticles2D" parent="Sprite"]
position = Vector2( 0, 5 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
speed_scale = 3.0
texture = ExtResource( 5 )
gravity = Vector2( 98, 0 )
scale_amount = 0.05

[node name="DeathParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -3 )
emitting = false
amount = 100
lifetime = 0.6
one_shot = true
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0, -1 )
gravity = Vector2( 0, 0 )
initial_velocity = 28.3
radial_accel = 100.0
color = Color( 0, 0, 0, 1 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/attack = SubResource( 2 )
anims/die = SubResource( 3 )
anims/idle = SubResource( 1 )
anims/walk = SubResource( 4 )

[node name="Core" parent="." instance=ExtResource( 2 )]

[node name="Specs" type="Node" parent="."]
script = ExtResource( 3 )
hp = 500
attack = 10
speed = 65

[node name="HurtAudio" type="AudioStreamPlayer" parent="."]

[node name="DeathAudio" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="Sprite/HurtArea" to="Core" method="_on_HurtArea_body_entered"]
[connection signal="body_exited" from="Sprite/HurtArea" to="Core" method="_on_HurtArea_body_exited"]
[connection signal="body_entered" from="Sprite/SlowdownArea" to="Core" method="_on_SlowdownArea_body_entered"]
[connection signal="body_exited" from="Sprite/SlowdownArea" to="Core" method="_on_SlowdownArea_body_exited"]
[connection signal="body_entered" from="Sprite/TargetArea" to="Core" method="_on_TargetArea_body_entered"]
[connection signal="body_exited" from="Sprite/TargetArea" to="Core" method="_on_TargetArea_body_exited"]
[connection signal="body_entered" from="Sprite/WatchArea" to="Core" method="_on_WatchArea_body_entered"]
[connection signal="body_exited" from="Sprite/WatchArea" to="Core" method="_on_WatchArea_body_exited"]
[connection signal="animation_finished" from="Animation" to="Core" method="_on_Animation_animation_finished"]
